# luna-os

luna/: .env.example  (+8 more)
luna/src-tauri/: Cargo.toml  tauri.conf.json
luna/src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  logging.rs  state.rs
luna/src-tauri/src/action/: dispatcher.rs  handler_registry.rs  history.rs  mod.rs  queue.rs  registry.rs  types.rs  undo.rs
luna/src-tauri/src/agent/: conductor.rs  leaf.rs  llm_client.rs  llm_stream.rs  messaging.rs  mod.rs  model_router.rs  orchestrator.rs  planner.rs  registry.rs  response_parser.rs  scratchpad.rs  stream_parser.rs  task_graph.rs  transcription.rs
luna/src-tauri/src/app/: commands.rs  descriptor.rs  lifecycle.rs  manifest.rs  mod.rs  template_registry.rs
luna/src-tauri/src/collaboration/: commands.rs  identity.rs  mod.rs  presence.rs  rbac.rs  sync.rs
luna/src-tauri/src/intelligence/: commands.rs  learning.rs  mod.rs  pattern_detector.rs  user_model.rs
luna/src-tauri/src/memory/: context_budget.rs  episodic.rs  mod.rs  procedural.rs  semantic.rs  working.rs
luna/src-tauri/src/migration/: clipboard.rs  commands.rs  export.rs  file_import.rs  mod.rs  project_detector.rs
luna/src-tauri/src/persistence/: db.rs
luna/src-tauri/src/security/: audit.rs  mod.rs  permissions.rs  policy.rs  sandbox.rs  workspace_isolation.rs
luna/src-tauri/src/sync/: batcher.rs  mod.rs  topic.rs
luna/src-tauri/src/telemetry/: commands.rs  latency.rs  metrics.rs  mod.rs
luna/src-tauri/src/window/: commands.rs  manager.rs  mod.rs  types.rs
luna/src-tauri/src/workspace/: commands.rs  manager.rs  mod.rs
(+203 files in other folders)
